<resources>
    <string name="app_name">Doodlz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="title_activity_main_fragment1">Fragmento de actividad principal 1</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">¡Hola Mundo Cuadrado!</string>
    <string name="button_erase">Borrar imagen</string>
    <string name="button_set_color">Establecer color</string>
    <string name="button_set_line_width">Establecer ancho de línea</string>
    <string name="line_imageview_description">Esto muestra el grosor de la línea.</string>
    <string name="label_alpha">Alfa</string>
    <string name="label_red">Rojo</string>
    <string name="label_green">Verde</string>
    <string name="label_blue">Azul</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_delete">Borrar dibujo</string>
    <string name="menuitem_line_width">Grosor de línea</string>
    <string name="menuitem_save">Guardar</string>
    <string name="menuitem_print">Imprimir</string>
    <string name="menuitem_exit">Salir</string>
    <string name="message_erase">¿Borrar el dibujo?</string>
    <string name="message_error_saving">Hubo un error al guardar la imagen.</string>
    <string name="message_saved">Su pintura guardada se puede ver en la aplicación Fotos seleccionando Carpetas del dispositivo en el menú de esa aplicación [Nota: \\\' es la secuencia de escape de comillas simples (\'), sin \\, el IDE emite la advertencia “Apóstrofo no precedido por \\”.]</string>
    <string name="message_error_printing">Su dispositivo no admite la impresión</string>
    <string name="permission_explanation">Para guardar una imagen, la aplicación requiere permiso para escribir en el almacenamiento externo</string>
    <string name="title_color_dialog">Elige Color</string>
    <string name="title_line_width_dialog">Elija ancho de línea</string>

    <string name="ingreso_nombre">Nombre</string>
    <string name="ingreso_apellido">Apellido</string>

</resources>