<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="deitel.com.MainActivity">


    <group android:id="@+id/grupo_1">
        <item
            android:id="@+id/color"
            android:title="@string/menuitem_color"
            android:icon="@drawable/ic_palette_24dp"
            app:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/line_width"
            android:title="@string/menuitem_line_width"
            android:icon="@drawable/ic_brush_24dp"
            app:showAsAction="ifRoom">
        </item>

    </group>

    <group android:id="@+id/grupo_2">
        <item
            android:id="@+id/delete_drawing"
            android:title="@string/menuitem_delete"
            android:icon="@drawable/ic_delete_24dp"
            app:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/save"
            android:title="@string/menuitem_save"
            android:icon="@drawable/ic_save_24dp"
            app:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/print"
            android:title="@string/menuitem_print"
            android:icon="@drawable/ic_print_24dp"
            app:showAsAction="ifRoom">
        </item>
    </group>

    <group android:id="@+id/grupo_3">
        <item
            android:id="@+id/exit"
            android:icon="?attr/actionModeCloseDrawable"
            android:title="@string/menuitem_exit"
            app:showAsAction="never"/>
    </group>

</menu>